# openvla-libero-reproduction

./: .gitignore  README.md  pyproject.toml
configs/: baseline.json
data/: train_episodes.jsonl
results/: latest_metrics.json
scripts/: run_reproduction.py
src/openvla_libero_reproduction/: __init__.py  dataset.py  env.py  evaluate.py  policy.py
tests/: test_pipeline.py
