[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openvla-libero-reproduction"
version = "0.1.0"
description = "A small-scale reproduction scaffold for instruction-conditioned embodied manipulation."
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
